--- a/templates/live/customer_stories/customer_stories_list.html
+++ b/templates/live/customer_stories/customer_stories_list.html
@@ -39,7 +39,7 @@
       <div id="newShowModal" class="modal  hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 id="myModalLabel">Schedule a show</h3>
+              <h3 id="myModalLabel">Add a Customer stories</h3>
             </div>
             <div class="modal-body">
                      <div class="controls controls-row">
@@ -84,12 +84,12 @@
         <div class="row-fluid">
           
           <div class="span12">
-            <h2>{{ _("Shows") }} </h2>
+            <h2>{{ _("Customer stories") }} </h2>
             
             <div class="btn-group">
             
                     <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("Schedule a show") }} <i class="icon-plus"></i>
+                    {{ _("Add a Customer stories") }} <i class="icon-plus"></i>
                     </button>
             </div>
                
