--- a/templates/live/shows/list_show.html
+++ b/templates/live/shows/list_show.html
@@ -124,7 +124,7 @@
                   
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
-                      <img src="/static/img/accounts_blank.png">
+                      <img src="/static/img/blankshow.png">
                       <p class="lead">{{ _('Shows pages  let you schedule your hangouts (classes), share your knowledge and be usefull.') }}</p>
                   </div>
                
