Attach documents on contacts,opportunities,leads,cases #22

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -163,7 +163,7 @@
                       <li class="ng-tab" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">{{ _("Contacts") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Opportunities") }}</a></li>
                       <li class="ng-tab"  ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{ _("Cases") }}</a></li>
-                      <li class="ng-tab"  ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{ _("Documents") }}</a></li>
+                      <li class="ng-tab"  ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{ _("Attach Documents") }}</a></li>
                       <li class="ng-tab"  ng-class="{active: selectedTab ==7}"><a ng-click="selectedTab = 7;">{{ _("Send an Email") }}</a></li>
                     </ul>
                     <div class="tab-content">
