--- a/templates/live/product_videos/product_videos_show.html
+++ b/templates/live/product_videos/product_videos_show.html
@@ -106,7 +106,7 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input ng-hide="isLoading" ng-click="deleteshow(show)" type="submit" class="btn red" value="Delet this show">
+                <input ng-hide="isLoading" ng-click="deleteshow(show)" type="submit" class="btn red" value="Delete this Product Video">
                 <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
               </div>
                </form>
